--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ header {
   left: 0;
   right: 0;
   z-index: 100;
+  overflow-y: auto;
 
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
